@@ -281,8 +281,8 @@ A mount \fBlocation-list\fP can use the cut operator, \fB||\fP, to specify
 locations that should be tried if none of the locations to the left of it
 where selected for a mount attempt.
 
-A mount \fBlocation\fP consists of an optional colon seperated list
-of \fBselectors\fP, followed by a colon seperated list of \fBoption:=value\fP
+A mount \fBlocation\fP consists of an optional colon separated list
+of \fBselectors\fP, followed by a colon separated list of \fBoption:=value\fP
 pairs.
 
 The \fBselectors\fP that may be used return a value or boolean result.
@@ -334,7 +334,7 @@ has the value "unknown".
 .TP
 .B byte
 .br
-The endianess of the hardware.
+The endianness of the hardware.
 .TP
 .B cluster
 .br
