@@ -157,7 +157,7 @@ the map in which case they need to umounted manually.
 .P
 If the option to disable the check to see if the daemon is already
 running is used be aware that autofs currently may not function correctly
-for certain types of automount maps. The mounts of the seperate daemons
+for certain types of automount maps. The mounts of the separate daemons
 might interfere with one another. The implications of running multiple
 daemon instances needs to be checked and tested before we can say this
 is supported.
