@@ -55,6 +55,7 @@
 - remove unused offset handling code.
 - fix mount as you go offset selection.
 - link daemon with pthread library (Debian patch).
+- manpage corrections (Debian patch).
 
 04/06/2014 autofs-5.1.0
 =======================
